# codeify-cli

./: AGENTS.md  README.md  SECURITY.md  codeify-test.bat  codeify-test.sh  oauth.txt  package-lock.json  package.json  test.sh  tsconfig.json
.github/workflows/: build-binaries.yml  ci.yml  publish-model-catalog.yml
legacy-python/: .gitignore  Makefile  README.md  codeify-python-wrapper  pyproject.toml
legacy-python/src/codeify_cli/: __init__.py  agent.py  api.py  cli.py  config.py  sessions.py  slash_commands.py  terminal.py  tools.py
legacy-python/tests/: test_agent_integration.py  test_api.py  test_cli.py  test_config.py  test_sessions.py  test_slash_commands.py  test_terminal.py  test_tools.py
scripts/: build-binaries.sh  check-lockfile-commit.mjs  create-source-archive.sh  diff-model-catalog.mjs  edit-tool-stats.mjs  install.cjs  local-release.mjs  profile-coding-agent-node.mjs  publish-model-catalog.mjs  session-transcripts.ts
